add decay option numbers

--- a/ECIPs/ECIP-1018.md
+++ b/ECIPs/ECIP-1018.md
@@ -53,12 +53,12 @@ The current mining rewards on the Ethereum Classic Network are as follows:
 
 #####  Pre-calculated Decay Options
 
-|Decay Percentage|Miner Decay Amount|Uncle Decay Amount|Years to Decay|Estimated Supply (Current Reward)|Estimated Supply (1.5% Growth Reward)|Block Height Reward Ends|
-|----------------|------------------|------------------|--------------|---------------------------------|-------------------------------------|------------------------|
-|0.5000%|0.025000|0.002500|5.236872146|130,071,034.98|130,073,443.73|11,010,000|
-|0.2500%|0.012500|0.001250|8.090753425|161,716,038.24|161,720,708.59|17,010,000|
-|0.1250%|0.006250|0.000625|13.79851598|225,006,044.76|225,018,362.75|29,010,000|
-|0.0625%|0.003125|0.0003125|25.2140411|351,586,057.80|351,991,724.60|53,010,000|
+|Decay Option #|Decay Percentage|Miner Decay Amount|Uncle Decay Amount|Years to Decay|Estimated Supply (Current Reward)|Estimated Supply (1.5% Growth Reward)|Block Height Reward Ends|
+|--------------|----------------|------------------|------------------|--------------|---------------------------------|-------------------------------------|------------------------|
+|1|0.5000%|0.025000|0.002500|5.236872146|130,071,034.98|130,073,443.73|11,010,000|
+|2|0.2500%|0.012500|0.001250|8.090753425|161,716,038.24|161,720,708.59|17,010,000|
+|3|0.1250%|0.006250|0.000625|13.79851598|225,006,044.76|225,018,362.75|29,010,000|
+|4|0.0625%|0.003125|0.0003125|25.2140411|351,586,057.80|351,991,724.60|53,010,000|
 
 ###  Rationale
 
