corrections, table columns

--- a/ECIPs/ECIP-1019.md
+++ b/ECIPs/ECIP-1019.md
@@ -53,8 +53,8 @@ The current mining rewards on the Ethereum Classic Network are as follows:
 
 #####  Pre-calculated Decay Options
 
-|Decay Option #|Decay Percentage|Miner Decay Amount|Uncle Decay Amount|Years to Decay|Estimated Supply (Current Reward)|Estimated Supply (1.5% Growth Reward)|Block Height Reward Ends|
-|--------------|----------------|------------------|------------------|--------------|---------------------------------|-------------------------------------|------------------------|
+|Decay Option #|Decay Percentage|Miner Decay Amount|Uncle Decay Amount|Years to Decay|Estimated Supply (Current Reward)|Block Height Reward Ends|
+|--------------|----------------|------------------|------------------|--------------|---------------------------------|------------------------|
 |1|5.00%|0.2500|0.02500|5.236872146|99,851,032|11,010,000|
 |2|4.00%|0.2000|0.02000|5.950342466|100,226,032|12,510,000|
 |3|3.00%|0.1500|0.01500|7.139454909|100,851,532|15,009,990|
