ECIP-1022: fix section level

--- a/ECIPs/ECIP-1022.md
+++ b/ECIPs/ECIP-1022.md
@@ -1,4 +1,4 @@
-### Title
+## Title
 
     ECIP: 1022
     Title: Generalized Version Bits Voting for Consensus Soft and Hard Forks
@@ -9,11 +9,11 @@
     
 <br />
 
-### Abstract
+## Abstract
 
 The following ECIP tries to bring the best practices about how Bitcoin deals with consensus hard fork ([BIP-9](https://github.com/bitcoin/bips/blob/master/bip-0009.mediawiki) and [BIP-135](https://github.com/bitcoin/bips/blob/master/bip-0135.mediawiki)) into Ethereum Classic. Rather than hard-code a block number as we currently do, each block mined emits support of the new consensus hard-fork. Only when a large enough portion of the network support it, the hard-fork is "locked-in" and will be activated.
 
-### Motivation
+## Motivation
 
 **Lack of an appropriate voting method can results in network forking**. The DAO hard fork was such an example. Currently the way Ethereum used to gather opinions was through [CarbonVote](http://carbonvote.com/). It indeed has the advantage that it brings the opinions of Ethereum holders rather than miners. However, it is not enforceable and we all know the disastrous result it brought during the DAO hard fork period. We don't want that to happen again.
 
@@ -25,7 +25,7 @@ The following ECIP tries to bring the best practices about how Bitcoin deals wit
 
 **Ethereum Classic will become a stable protocol soon**. When we finished dealing with the monetary policy and finally the difficulty bomb, ETC's protocol would become a rather stable one. This means most of the new consensus hard fork would be new features of the network, rather than fixing existing bugs. In that case, voting would be important to keep the whole network healthy.
 
-### Terms and conventions
+## Terms and conventions
 
 The version bits used by this proposal for signaling deployment of forks are
 referred to as 'signaling bits' or shortened to 'bits' where unambiguous.
@@ -43,9 +43,9 @@ The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT",
 "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", and "OPTIONAL" in this
 document are to be interpreted as described in RFC 2119.
 
-### Specification
+## Specification
 
-#### Signaling bits
+### Signaling bits
 
 Ethereum's extraData field are 32-bytes, i.e. a 256-bit value. The field itself should be a RLP list that follows:
 
@@ -55,7 +55,7 @@ Ethereum's extraData field are 32-bytes, i.e. a 256-bit value. The field itself 
 
 For this ECIP, `version` should equal to `1`, and `signalingBits` and `clientIdentity` fulfill the rest of the extraData field as long as it does not exceed the maximum size allowed. This allows us to have way more concurrent signalings and better backward compatibility than Bitcoin.
 
-#### Deployment states
+### Deployment states
 
 With each block and fork, we associate a deployment state. The possible states are:
 
@@ -67,7 +67,7 @@ With each block and fork, we associate a deployment state. The possible states a
 
 In accordance with BIP9, a block's state SHALL never depend on its own extraData; only on that of its ancestors.
 
-#### Fork deployment parameters
+### Fork deployment parameters
 
 Each fork deployment is specified by the following per-chain parameters:
 
@@ -80,7 +80,7 @@ Each fork deployment is specified by the following per-chain parameters:
 * The **minlockedblocks** specifies a minimum number of blocks which a fork must remain in locked-in state before it can become active. Both minlockedblocks and minlockedtime (see below) must be satisfied before a fork can become active.
 * The **minlockedtime** specifies a minimum grace time, an earliest time after lock-in at which the fork can become active. If the MTP of a block >= (minlockedtime + median time of the block that locked in the fork), then the fork becomes activated. Both minlockedtime and minlockedblocks (see above) must be satisfied before a fork can become active.
 
-#### Tallying
+### Tallying
 
 If a block's extraData specifies a version other than `1`, all its signaling bits MUST be treated as if they are '0'.
 
@@ -90,7 +90,7 @@ A signaling bit value of '0' SHALL indicate absence of support of a fork and SHA
 
 The signaling bits SHALL be tallied whenever the head of the active chain changes (including after reorganizations).
 
-#### State transitions
+### State transitions
 
 The following diagram illustrates the generalized state machine:
 
@@ -121,11 +121,11 @@ The ACTIVE and FAILED states are terminal; a deployment stays in these states on
 
 Deployment states are maintained along block chain branches. They need re-computation when a reorganization happens.
 
-#### New consensus rules
+### New consensus rules
 
 New consensus rules deployed by a fork SHALL be enforced for each block that has ACTIVE state.
 
-#### Optional operator notifications
+### Optional operator notifications
 
 An implementation SHOULD notify the operator when a deployment transitions
 to STARTED, LOCKED_IN, ACTIVE or FAILED states.
@@ -156,15 +156,15 @@ implementations allow the user to configure the emission of such notifications
 (e.g. suitable N and M parameters in the messages above, e.g. a best-guess
 window of 100 blocks).
 
-### Rationale
+## Rationale
 
 The timeout into FAILED state allows eventual reuse of bits if a fork was not successfully activated.
 
 A fallow period at the conclusion of a fork attempt allows some detection of buggy clients, and allows time for warnings and software upgrades for successful forks. The duration of a fallow period is not specified by this proposal, although a conventional fallow period of 3 months is RECOMMENDED.
 
-### Guidelines
+## Guidelines
 
-#### Parameter selection guidelines
+### Parameter selection guidelines
 
 The following guidelines are suggested for selecting the parameters for a fork:
 
@@ -181,7 +181,7 @@ NOTE: If minlockedtime and minlockedblocks are both set to 0, then the fork will
 
 A later deployment using the same bit is possible as long as the starttime is after the previous fork's timeout or activation, but it is discouraged until necessary, and even then recommended to have a pause in between to detect buggy software.
 
-#### Signaling guidelines
+### Signaling guidelines
 
 An implementation SHOULD signal '0' on a bit if one of the following holds true:
 
