ECIP-1022: remove MTP and use block number only
This simplifies implementations for ECIP-1022. At the same time, using only block numbers seem to be the standard convention in Ethereum world.

--- a/ECIPs/ECIP-1022.md
+++ b/ECIPs/ECIP-1022.md
@@ -30,15 +30,6 @@ The following ECIP tries to bring the best practices about how Bitcoin deals wit
 The version bits used by this proposal for signaling deployment of forks are
 referred to as 'signaling bits' or shortened to 'bits' where unambiguous.
 
-All times in this specification are in seconds since the epoch [1].
-Durations / time offsets are in seconds.
-
-The term 'MTP' refers to the 'median time past' which is calculated as the
-median nTime of a block and its 10 predecessors. It is treated as a monotonic
-clock defined by a chain, and evaluated on the ancestor of a block, i.e.
-
-MTP := `GetMedianTimePast(block.parent)`
-
 The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT",
 "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", and "OPTIONAL" in this
 document are to be interpreted as described in RFC 2119.
@@ -54,6 +45,8 @@ Ethereum's extraData field are 32-bytes, i.e. a 256-bit value. The field itself 
 ```
 
 For this ECIP, `version` should equal to `1`, and `signalingBits` and `clientIdentity` fulfill the rest of the extraData field as long as it does not exceed the maximum size allowed. This allows us to have way more concurrent signalings and better backward compatibility than Bitcoin.
+
+`signalingBits` are right-aligned, i.e. `0b1` has its bit at index 0 set, `0b10` has its bit at index 1 set, `0b100` has its bit at index 2 set.
 
 ### Deployment states
 
@@ -72,13 +65,12 @@ In accordance with BIP9, a block's state SHALL never depend on its own extraData
 Each fork deployment is specified by the following per-chain parameters:
 
 * The **name** specifies a very brief description of the fork, reasonable for use as an identifier. For deployments described in a single BIP, it is recommended to use the name "bipN" where N is the appropriate BIP number.
-* The **bit** determines which bit in the extraData field of the block is to be used to signal the fork deployment. It is chosen from the set {0,1,2,...,28}.
-* The **starttime** specifies a minimum median time past (MTP) of a block at which the bit gains its meaning.
-* The **timeout** specifies a time at which the deployment is considered failed. If the MTP of a block >= timeout and the fork has not yet locked in (including this block's bit state), the deployment is considered failed on all descendants of the block.
+* The **bit** determines which bit in the extraData field of the block is to be used to signal the fork deployment.
+* The **start** specifies a block number at which the bit gains its meaning.
+* The **timeout** specifies a time at which the deployment is considered failed. If the current block number >= (start + timeout) and the fork has not yet locked in (including this block's bit state), the deployment is considered failed on all descendants of the block.
 * The **windowsize** specifies the number of past blocks (including the block under consideration) to be taken into account for locking in a fork.
 * The **threshold** specifies a number of blocks, in the range of 1..windowsize, which must signal for a fork in order to lock it in. The support is measured when the chain height is evenly divisible by the windowsize. If the windowsize is set to 2016 (as in BIP9) this coincides with the 2016-block re-targeting intervals.
-* The **minlockedblocks** specifies a minimum number of blocks which a fork must remain in locked-in state before it can become active. Both minlockedblocks and minlockedtime (see below) must be satisfied before a fork can become active.
-* The **minlockedtime** specifies a minimum grace time, an earliest time after lock-in at which the fork can become active. If the MTP of a block >= (minlockedtime + median time of the block that locked in the fork), then the fork becomes activated. Both minlockedtime and minlockedblocks (see above) must be satisfied before a fork can become active.
+* The **minlockedblocks** specifies a minimum number of blocks which a fork must remain in locked-in state before it can become active. Both minlockedblocks and minlockedtime (see below) must be satisfied before a fork can become active. If the current block number >= (minlockedblocks + the block number that locked in the fork), then the fork becomes activated. 
 
 ### Tallying
 
@@ -98,24 +90,23 @@ The following diagram illustrates the generalized state machine:
 
 The genesis block of any chain SHALL have the state DEFINED for each deployment.
 
-A given deployment SHALL remain in the DEFINED state until it either passes the starttime (and becomes STARTED) or the timeout time (and becomes FAILED).
+A given deployment SHALL remain in the DEFINED state until it either passes the start (and becomes STARTED) or the timeout time (and becomes FAILED).
 
 Once a deployment has STARTED, the signal for that deployment SHALL be tallied over the the past windowsize blocks whenever a new block is received on that chain.
 
 A transition from the STARTED state to the LOCKED_IN state SHALL only occur when all of these are true:
 
 * the height of the received block is an integer multiple of the window size
-* the MTP is below the timeout time
+* the current block number is below (start + timeout)
 * at least threshold out of windowsize blocks have signaled support
 
-A similar height synchronization precondition SHALL exist for the transition from LOCKED_IN to ACTIVE. These synchronization conditions are expressed by the "mod(height, windowsize) = 0" clauses in the diagram, and have been been added so that backward compatibility with BIP9's use of the 2016-block re-targeting periods can be configured for existing deployments (see above 'Optional full backward compatibility' section).
+A similar height synchronization precondition SHALL exist for the transition from LOCKED_IN to ACTIVE. These synchronization conditions are expressed by the "mod(height, windowsize) = 0" clauses in the diagram.
 
-A transition from LOCKED_IN to ACTIVE state SHALL only occur if the height synchronization criterion is met and two configurable 'grace period' conditions are fulfilled:
+A transition from LOCKED_IN to ACTIVE state SHALL only occur if the height synchronization criterion is met and the below configurable 'grace period' conditions are fulfilled:
 
 * current height MUST be at least minlockedblocks above LOCKED_IN height
-* MTP must exceed LOCKED_IN time by at least minlockedtime seconds
 
-NOTE: If minlockedtime and minlockedblocks are both set to 0, then the fork will proceed directly to ACTIVE state once the chain height reaches a multiple of the windowsize.
+NOTE: If minlockedblocks is set to 0, then the fork will proceed directly to ACTIVE state once the chain height reaches a multiple of the windowsize.
 
 The ACTIVE and FAILED states are terminal; a deployment stays in these states once they are reached.
 
@@ -170,14 +161,13 @@ The following guidelines are suggested for selecting the parameters for a fork:
 
 * **name** SHOULD be selected such that no two forks, concurrent or otherwise, ever use the same name.
 * **bit** SHOULD be selected such that no two concurrent forks use the same bit. Implementors should make an effort to consult resources such as [2] to establish whether the bit they wish to use can reasonably be assumed to be unclaimed by a concurrent fork, and to announce their use ('claim') of a bit for a fork purpose on various project mailing lists, to reduce chance of collisions.
-* **starttime** SHOULD be set to some date in the future, approximately one month after a software release date which includes the fork signaling.  This allows for some release delays, while preventing triggers as a result of parties running pre-release software.
-* **timeout** is RECOMMENDED to be 1 year (31536000 seconds) after starttime.
+* **start** SHOULD be set to some block number in the future, approximately one month after a software release date which includes the fork signaling.  This allows for some release delays, while preventing triggers as a result of parties running pre-release software.
+* **timeout** is RECOMMENDED to be a block number that is approximately 1 year after start.
 * **windowsize** SHOULD be set large enough to allow reception of an adequately precise signal.
 * **threshold** SHOULD be set as high as possible to ensure a smooth activation based on the estimated support and the nature of the proposed changes. It is strongly RECOMMENDED that threshold >= windowsize / 2 (rounded up) to ensure that a proposal is only activated by majority support.
 * **minlockedblocks** is RECOMMENDED to be set >= windowsize, to ensure that a full window passes in LOCKED_IN state. Lower values will be ineffective as the transition from LOCKED_IN to ACTIVE is guarded by a synchronization based on the window size.
-* **minlockedtime** SHOULD only be set > 0 if a minimum LOCKED_IN time period needs be strictly enforced. It is permissible to set minlockedblocks to 0 and only specify minlockedtime, however the synchronization condition means the grace period can only expire once the time has passed AND the chain height is a multiple of the windowsize.
 
-NOTE: If minlockedtime and minlockedblocks are both set to 0, then the fork will proceed to ACTIVE state when the chain height reaches a multiple of the windowsize.
+NOTE: If minlockedblocks is set to 0, then the fork will proceed to ACTIVE state when the chain height reaches a multiple of the windowsize.
 
 A later deployment using the same bit is possible as long as the starttime is after the previous fork's timeout or activation, but it is discouraged until necessary, and even then recommended to have a pause in between to detect buggy software.
 
