ECIP-1022: typo, nVersion should be signalingBits

--- a/ECIPs/ECIP-1022.md
+++ b/ECIPs/ECIP-1022.md
@@ -54,7 +54,7 @@ With each block and fork, we associate a deployment state. The possible states a
 
 * **DEFINED** is the first state that each fork starts out as. The genesis block for any chain SHALL by definition be in this state for each deployment.
 * **STARTED** for blocks past the starttime.
-* **LOCKED_IN** after STARTED, if at least threshold out of windowsize blocks have the associated bit set in nVersion, measured at next height that is evenly divisible by the windowsize.
+* **LOCKED_IN** after STARTED, if at least threshold out of windowsize blocks have the associated bit set in `signalingBits` in `extraData` block header, measured at next height that is evenly divisible by the windowsize.
 * **ACTIVE** for all blocks after the grace period conditions have been met.
 * **FAILED** if past the timeout time and LOCKED_IN was not reached.
 
