ECIP-1023: simplify contract definition
Information will needed to be in the implementation nontheless.

--- a/ECIPs/ECIP-1023.md
+++ b/ECIPs/ECIP-1023.md
@@ -27,7 +27,9 @@ In addition to the motivation provided in ECIP-1022:
 
 In addition to the fork deployment parameters defined in ECIP-1022, the following should also exist:
 
-* The **carbonThreshold** specifies the portion * 1000 required, in the entire start..(start + timeout) blocks, which should vote YES.
+* **carbonVoteYesAddress** the address for carbon vote YES.
+* **carbonVoteNoAddress** the address for carbon vote NO.
+* **carbonThreshold** specifies the portion * 1000 required, in the entire start..(start + timeout) blocks, which should vote YES.
 
 ### Carbon Vote
 
@@ -35,13 +37,6 @@ Besides defining the signaling bits for miners to vote, the implementor of the h
 
 ```
 contract Vote {
-    string name;
-    uint start;
-    uint timeout;
-    uint carbonThreshold;
-    uint minerThreshold;
-    uint minLockedBlocks;
-
     event LogVote(address indexed addr);
 
     function() {
