--- a/ECIPs/ECIP-1000.mediawiki
+++ b/ECIPs/ECIP-1000.mediawiki
@@ -104,16 +104,16 @@ Each ECIP must begin with an RFC 822 style header preamble. The headers must app
   ECIP: <ECIP number, or "?" before being assigned>
   Layer: <Consensus (soft fork) | Consensus (hard fork) | Peer Services | API/RPC | Applications>
   Title: <ECIP title; maximum 44 characters>
-  Author: <authors real names and email addrs>
-  Discussions-To: <email address>
-  Comments-Summary: <summary tone>
-  Comments-URI: <links to wiki page for comments>
+  Author: (authors real names and email addrs)
+  Discussions-To: (email address)
+  Comments-Summary: (summary tone)
+  Comments-URI: (links to wiki page for comments)
   Status: <Draft | Active | Proposed | Deferred | Rejected |
            Withdrawn | Final | Replaced | Obsolete>
   Type: <Standards Track | Informational | Process>
-  Created: <date created on, in ISO 8601 (yyyy-mm-dd) format>
-  License: <abbreviation for approved license(s)>
-  License-Code: <abbreviation for code under different approved license(s)>
+  Created: (date created on, in ISO 8601 (yyyy-mm-dd) format)
+  License: (abbreviation for approved license(s))
+  License-Code: (abbreviation for code under different approved license(s))
   Requires: <ECIP number(s)>
   Replaces: <ECIP number>
   Superseded-By: <ECIP number>
