--- a/ECIPs/ECIP-1000.mediawiki
+++ b/ECIPs/ECIP-1000.mediawiki
@@ -101,22 +101,22 @@ Each ECIP should have the following parts:
 
 Each ECIP must begin with an RFC 822 style header preamble. The headers must appear in the following order. Headers marked with "*" are optional and are described below. All other headers are required.
 
-  ECIP: <ECIP number, or "?" before being assigned>
-  Layer: <Consensus (soft fork) | Consensus (hard fork) | Peer Services | API/RPC | Applications>
-  Title: <ECIP title; maximum 44 characters>
-  Author: (authors real names and email addrs)
-  Discussions-To: (email address)
-  Comments-Summary: (summary tone)
-  Comments-URI: (links to wiki page for comments)
-  Status: <Draft | Active | Proposed | Deferred | Rejected |
-           Withdrawn | Final | Replaced | Obsolete>
-  Type: <Standards Track | Informational | Process>
-  Created: (date created on, in ISO 8601 (yyyy-mm-dd) format)
-  License: (abbreviation for approved license(s))
-  License-Code: (abbreviation for code under different approved license(s))
-  Requires: <ECIP number(s)>
-  Replaces: <ECIP number>
-  Superseded-By: <ECIP number>
+    ECIP: (ECIP number, or "?" before being assigned)
+  * Layer: (Consensus (soft fork) | Consensus (hard fork) | Peer Services | API/RPC | Applications)
+    Title: (ECIP title; maximum 44 characters) 
+    Author: (authors real names and email addrs)
+  * Discussions-To: (email address)
+    Comments-Summary: (summary tone)
+    Comments-URI: (links to wiki page for comments)
+    Status: (Draft | Active | Proposed | Deferred | Rejected |
+             Withdrawn | Final | Replaced | Obsolete)
+    Type: (Standards Track | Informational | Process)
+    Created: (date created on, in ISO 8601 (yyyy-mm-dd) format)
+    License: (abbreviation for approved license(s))
+  * License-Code: (abbreviation for code under different approved license(s))
+  * Requires: (ECIP number(s))
+  * Replaces: (ECIP number)
+  * Superseded-By: (ECIP number)
 
 The Layer header (only for Standards Track ECIPs) documents which layer of Ethereum Classic the ECIP applies to.
 
