--- a/ECIPs/ECIP-1000.mediawiki
+++ b/ECIPs/ECIP-1000.mediawiki
@@ -123,7 +123,7 @@ The Layer header (only for Standards Track ECIPs) documents which layer of Ether
 The Author header lists the names and email addresses of all the authors/owners of the ECIP.
 The format of the Author header value must be
 
-  Random J. User <address@dom.ain>
+  Random J. User <123@dom.ain>
 
 If there are multiple authors, each should be on a separate line following RFC 2822 continuation line conventions.
 
