Sidechains: Private Sidechains

--- a/ECIPs/ECIP-1027.md
+++ b/ECIPs/ECIP-1027.md
@@ -88,6 +88,8 @@ parent chain, and therefore doesn’t need cross transactions, or can perform th
 Conception of making checkpoints on public secure blockchain is a popular idea in private chains and standalone 
 services, also called as Anchoring.
 
+See [ECIP-1028](ECIP-1028.md)
+
 ### Trusted Public Chain (C2)
 
 Trusted Public Chain is a chain managed by a public service or Dapp, and such service provides full management of 
