ECIP-1029: Indicate that soft-forked clients should use `70`'s TD for best chain selection

--- a/ECIPs/ECIP-1029.md
+++ b/ECIPs/ECIP-1029.md
@@ -24,6 +24,8 @@ Soft-forked clients support a new [Ethereum Wire Protocol](https://github.com/et
 
 Clients are recommended to continue to support older version number `62` and `63`. `62` and `63` should continue to use the old total difficulty calculation formula (`B_t = B'_t + B_d`) on or after `FORK_BLOCK`.
 
+Soft-forked clients should use version `70`'s total difficulty (with or without uniform tie breaking) for best chain selection.
+
 ### References
 
 * Sompolinsky, Yonatan, and Aviv Zohar. "Accelerating bitcoin’s transaction processing." Fast Money Grows on Trees, Not Chains (2013).
