ECIP-1031: add abstract

--- a/ECIPs/ECIP-1031.md
+++ b/ECIPs/ECIP-1031.md
@@ -10,11 +10,11 @@
     
 ### Abstract
 
-Recursive Length Prefix (see [Yellow Paper](https://ethereum.github.io/yellowpaper/paper.pdf) Appendix B) is the data type used for all common Ethereum Classic structures including blocks, raw transactions, receipts and accounts. Defining a media type for Recursive Length Prefix (RLP) would allow a RESTful HTTP server to return raw RLP information directly.
+Recursive Length Prefix (see [Yellow Paper](https://ethereum.github.io/yellowpaper/paper.pdf) Appendix B) is the data type used for all common Ethereum Classic structures including blocks, raw transactions, receipts and accounts. Defining a media type for Recursive Length Prefix (RLP) would allow a RESTful HTTP server to return raw RLP information directly. This is more efficient than the current JSON format for RPC calls.
 
 ### Specification
 
-Define a new media type according to RFC6838 under `application.vnd.ecip.rlp`. This media type has no required or optional parameters. It uses binary encoding. The specification for RLP can be found at [Yellow Paper](https://ethereum.github.io/yellowpaper/paper.pdf) Appendix B.
+Define a new media type according to RFC6838 under `application/vnd.ecip.rlp`. This media type has no required or optional parameters. It uses binary encoding. The specification for RLP can be found at [Yellow Paper](https://ethereum.github.io/yellowpaper/paper.pdf) Appendix B.
 
 ### Example
 
