ECIP-1031: Media Types -> Media Type

--- a/ECIPs/ECIP-1031.md
+++ b/ECIPs/ECIP-1031.md
@@ -1,7 +1,7 @@
 ### Title
 
     ECIP: 1031
-    Title: Recursive Length Prefix Media Types
+    Title: Recursive Length Prefix Media Type
     Author: Wei Tang <hi@that.world>
     Status: Draft
     Type: Standard
