--- a/ECIPs/ECIP-1032.md
+++ b/ECIPs/ECIP-1032.md
@@ -24,7 +24,7 @@ Group the bytearray of 160-bit addresses or 256-bit transaction hashes into pair
 
 #### Generate shorter address
 
-When an address starts with two bytes of zero, they can be ignored and not included in the readable string generation.
+When an address starts with `2*x` bytes of zero, they can be ignored and not included in the readable string generation.
 
 ### Hex Readibility Fix
 
