--- a/ECIPs/ECIP-1032.md
+++ b/ECIPs/ECIP-1032.md
@@ -10,9 +10,9 @@
     
 ### Abstract
 
-This defines convertion of address and transaction hash in Ethereum Classic network to readable strings, similar to how [Urbit](http://urbit.org/) handles its ship names.
+This defines convertion of address and transaction hash in Ethereum Classic network to readable strings, similar to how [Urbit](http://urbit.org/) handles its ship names. As an example, EthMine's coinbase address (0xdf7d7e053933b5cc24372f878c90e62dadad5d42) written in this scheme becomes `~ibhnwy~lmiper~difmev~sdacry~livtep~dotxpu~mnisbe~arnbyn~tpormu~porden`.
 
-As an example, EthMine's coinbase address (0xdf7d7e053933b5cc24372f878c90e62dadad5d42) written in this scheme becomes `~ibhnwy~lmiper~difmev~sdacry~livtep~dotxpu~mnisbe~arnbyn~tpormu~porden`.
+This ECIP only proposes an optional implementation for wallets and other dapp interface, and does not change anything in the underlying protocol, or in JSON RPC.
 
 ### Motivation
 
