ECIP-1032: generate shorter address like `~zod`

--- a/ECIPs/ECIP-1032.md
+++ b/ECIPs/ECIP-1032.md
@@ -24,7 +24,7 @@ Group the bytearray of 160-bit addresses or 256-bit transaction hashes into pair
 
 #### Generate shorter address
 
-When an address starts with `2*x` bytes of zero, they can be ignored and not included in the readable string generation.
+When an address starts with `2*x` bytes of zero, they can be ignored and not included in the readable string generation. The last "prefix" can also be ignored if it is zero.
 
 ### Hex Readibility Fix
 
@@ -53,6 +53,8 @@ def hex_to_readable(data, skip):
     ret = ""
     for i in range(0, len(data) // 2):
         if skip and data[i*2] == 0 and data[i*2+1] == 0:
+            continue
+        if skip and i*2 == len(data) // 2 - 2 and data[i*2] == 0:
             continue
         ret += "~%s%s" % (prefix[data[i*2]], suffix[data[i*2+1]])
     if ret == "":
