--- a/ECIPs/ECIP-1032.md
+++ b/ECIPs/ECIP-1032.md
@@ -26,7 +26,7 @@ Group the bytearray of 160-bit addresses or 256-bit transaction hashes into pair
 
 When an address starts with `2*x` bytes of zero, they can be ignored and not included in the readable string generation. The last "prefix" can also be ignored if it is zero.
 
-### Hex Readibility Fix
+### Hex Readability Fix
 
 In addition, allow `.` to be put in a hex address string for every two bytes. For example, EthMine's coinbase address (0xdf7d7e053933b5cc24372f878c90e62dadad5d42) becomes `0xdf7d.7e05.3933.b5cc.2437.2f87.8c90.e62d.adad.5d42`. Dot is used because it is the same character used in Urbit and in IPv4 addresses.
 
