ECIP-1036: conditional case

--- a/ECIPs/ECIP-1036.md
+++ b/ECIPs/ECIP-1036.md
@@ -20,7 +20,7 @@ Block 5452163 is chosen as the fork block number. This is a totally arbitrary an
 
 ### Specification
 
-At block 5452163, change the difficulty calculation formula to:
+If [an extension of ECIP-1010](https://github.com/ethereumproject/ECIPs/issues/63) is rejected, at block 5452163, change the difficulty calculation formula to:
 
 ```
 block_diff = parent_diff 
