--- a/ECIPs/ECIP-1036.md
+++ b/ECIPs/ECIP-1036.md
@@ -16,7 +16,7 @@ This ECIP describes a fallback plan if an extension of ECIP-1010 does not activa
 
 There is currently a small probability that [an extension of ECIP-1010](https://github.com/ethereumproject/ECIPs/issues/63) might not be able to be activated. The probability is really slight, but it is still possible. Please see the discussion of that issue for reasonings from different parties. This ECIP provides a fallback plan, to give assurance for those who might be impantient or worried of the difficulty bomb, so as to avoid a possible community split or an unexcepted hard fork.
 
-Block 5452163 is chosen as the fork block number. This is a totally arbitrary and meaningless number. In this way, we avoid collisions of the fork block number with other protocol improvement hard forks.
+Block 5452163 is chosen as the fork block number. This is a totally arbitrary and meaningless number. In this way, we avoid collisions of the fork block number with other protocol upgrade hard forks.
 
 ### Specification
 
