ECIP-1031: add link to the IANA assignment

--- a/ECIPs/ECIP-1031.md
+++ b/ECIPs/ECIP-1031.md
@@ -14,7 +14,7 @@ Recursive Length Prefix (see [Yellow Paper](https://ethereum.github.io/yellowpap
 
 ### Specification
 
-Define a new media type according to RFC6838 under `application/vnd.ecip.rlp`. This media type has no required or optional parameters. It uses binary encoding. The specification for RLP can be found at [Yellow Paper](https://ethereum.github.io/yellowpaper/paper.pdf) Appendix B.
+Define a new media type according to RFC6838 under `application/vnd.ecip.rlp` ([IANA media type assignment](https://www.iana.org/assignments/media-types/application/vnd.ecip.rlp)). This media type has no required or optional parameters. It uses binary encoding. The specification for RLP can be found at [Yellow Paper](https://ethereum.github.io/yellowpaper/paper.pdf) Appendix B.
 
 ### Example
 
