--- a/ECIPs/ECIP-1037.mediawiki
+++ b/ECIPs/ECIP-1037.mediawiki
@@ -1,7 +1,7 @@
 <pre>
   ECIP: 1037
   Layer: Applications
-  Title: URI Scheme
+  Title: Simple Interactive URI Scheme
   Author: Cody Burns <dontpanic@codywburns.com>
   Comments-Summary: No comments yet
   Status: Draft
@@ -12,10 +12,10 @@
 This ECIP is based off BIP 0021 can be referenced at https://github.com/bitcoin/bips/blob/master/bip-0021.mediawiki
 
 ==Abstract==
-This ECIP proposes a URI scheme for interacting with ethereum contract and accounts in a standard format.
+This ECIP proposes a URI scheme for interacting with ethereum contract and accounts in a uniform standard format. 
 
 ==Motivation==
-The purpose of this URI scheme is to enable users to easily make payments and interact with smart contracts by simply clicking links on webpages or scanning QR Codes.
+The purpose of this URI scheme is to enable users to easily make payments and interact with smart contracts by simply clicking links on webpages or scanning QR Codes. This allows for nfc, qr codes, or other similar non-interactive devices to store and transmit a standard message to a user, as well as interactive applications such as websites and dApps to present simple data to a user for action 
 
 ==Specification==
 
@@ -26,11 +26,11 @@ They SHOULD require the user to manually approve each payment individually, thou
 ETC clients SHOULD include the message field describing the actions of the code.
 
 === Operating system integration ===
-Graphical ethereums SHOULD register themselves as the handler for the "ethereum:" URI scheme by default, if no other handler is already registered. If there is already a registered handler, they MAY prompt the user to change it once when they first run the client.
+Graphical ethereum clients SHOULD register themselves as the handler for the "ethereum:" URI scheme by default, if no other handler is already registered. If there is already a registered handler, they MAY prompt the user to change it once when they first run the client.
 
 === General Format ===
 
-Ethereum URIs follow the general format for URIs as set forth in RFC 3986. The path component consists of a bitcoin address, and the query component provides additional payment options.
+Ethereum URIs follow the general format for URIs as set forth in RFC 3986. The path component consists of an Ethereum address, and the query component provides additional payment options.
 
 Elements of the query component may contain characters outside the valid range. These must first be encoded according to UTF-8, and then each octet of the corresponding UTF-8 sequence must be percent-encoded as described in RFC 3986.
 
@@ -74,6 +74,37 @@ I.e. amount=50.00 or amount=50 is treated as 50 ETC, and amount=50,000.00 is inv
 ETC clients MAY display the amount in any format that is not intended to deceive the user.
 They SHOULD choose a format that is foremost least confusing, and only after that most reasonable given the amount requested.
 For example, so long as the majority of users work in ETC units, values should always be displayed in ETC by default, even if wei would otherwise be a more logical interpretation of the amount.
+
+=== Bytecode Transactions ===
+
+Events and functions in evm contracts are can be preformatted to know functions in the underlying contract. The first four bytes of the call data for a function call specifies the function to be called. It is the first (left, high-order in big-endian) four bytes of the Keccak (SHA-3) hash of the signature of the function. This information along with the appropriate hex encoded data to pass.
+
+====Example====
+
+Contract C is at 0xdeadbeef... and has the following psudo function:
+
+
+ function getETC(){
+    require(block.number-payoutDrip >= payoutRate);
+    msg.sender.transfer(dropValue);   
+    }
+
+Contract C requires no inputs and only requires enough gas to preform its functions. The byte code for this function can be derived using `web3` as:
+ 
+  web3.sha3("getETC()");
+
+which yeilds:
+ 
+ 0x023b88685d10d29e0bf0563e4ab1b9d8fc8333c166705be5538c4b079cdd9af0
+
+The information that will be passed in the byte code field would then be:
+ 
+ code=0x023b88685d
+
+The entire URi could be:
+          
+ ethereum:0xdeadbeefdeadbeefdeadbeefdeadbeefdeadbeef&chain=61&code=0x023b88685d
+
 == Rationale ==
 
 ===Payment identifiers, not person identifiers===
@@ -128,9 +159,6 @@ Request 20.30 ETC to "DontPanic":
 
 Request 42.30 ETC to "DontPanic" with gas:
  ethereum:0xCe5ED529977b08f87CBc207ebC216859820461eE&chain=61?amount=20.3&gas=21000&label=DontPanic
-
-Request 50 ETC with message:
- ethereum:0xCe5ED529977b08f87CBc207ebC216859820461eE&chain=61?amount=50&label=DontPanic&message=Purchase%20token%20for%20project%20xyz%20ICO
 
 Request 50 ETC with message:
  ethereum:0xCe5ED529977b08f87CBc207ebC216859820461eE&chain=61?amount=50&label=DontPanic&message=Purchase%20token%20for%20project%20xyz%20ICO
